Crash beneath CSSValue::equals @ csas.cz https://bugs.webkit.org/show_bug.cgi?id=181243 <rdar://problem/35990826>

Reviewed by Alex Christensen.

Source/WebCore:

Test: fast/text/oblique-degree-equals-crash.html

* css/CSSFontStyleValue.cpp:
(WebCore::CSSFontStyleValue::equals const):

Null check both oblique pointers.

LayoutTests:

* fast/text/oblique-degree-equals-crash-expected.txt: Added.
* fast/text/oblique-degree-equals-crash.html: Added.


Canonical link: https://commits.webkit.org/197095@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@226372 268f45cc-cd09-0410-ab3c-d52691b4dbfc